--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_NAME=Laravel
+
+APP_NAME=BikeTours
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -10,8 +11,6 @@ APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
-
-# PHP_CLI_SERVER_WORKERS=4
 
 BCRYPT_ROUNDS=12
 
